syntax = "proto3";

package auth;

option go_package = "gen/go/auth;auth";


service AuthService{
    rpc Register(RegisterRequest) returns (RegisterResponse);

    rpc Login(LoginRequest) returns (LoginResponse);
    
    rpc Validate(ValidateRequest) returns (ValidateResponse);
}


message RegisterRequest{
    string username = 1; 
    string password = 2;
}

message RegisterResponse{
    string user_uuid = 1;
}

message LoginRequest{
    string username = 1; 
    string password = 2;
}

message LoginResponse{
    string token = 1;
}

message ValidateRequest{
    string token = 1;
}

message ValidateResponse{
    bool is_valid = 1;
    string user_uuid = 2;
}